# shardhana

./: .gitignore  CNAME  JOURNAL.md  README.md  SHANA_DECLARATION.md  TODO.md  hello_shardhana.py  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  simulation_log.csv  test.txt
.github/: copilot-instructions.md
core/: __init__.py  assembler1d.py  element.py  element1d.py  element1d_shana.py  material.py  node1d.py  run_bar1d.py
docs/: 01_bar_axial_concept.md  han-concept.md  hem_concept.md  hem_face.md  hem_seed.md  nature-and-shardhana.md  shardhana-dev-plan-notes.md  shardhana-research-lab-roles.md  shardhana-vision.md  shardhana_invitation.md  yeok.md
docs/ai/: ai_workflow.md
docs/guide/: development-environment.md  io-file-guidelines.md  open-source-companions.md  readme.md  readme.txt
docs/plan/: 001-shardhana-plan.md  readme.md
docs/reference/: readme.md  steel-manufacturing-process.md
docs/scribbles/: 01_bar_axial_concept.md  02_bar_vertical_concept.md  03_bar_progressive_failure.md  04_bar_disp_control.md  04_bar_displacement_control.md  readme.md  unit_distance.md
docs/theory/: readme.txt
docs/thoughts/: From_MD-To_MP4-notes.md  (+74 more)
examples/: demo_element1d.py
notebooks/: practice_cells.py  test.ipynb
plugins/: README.md
tests/: .gitkeep  _old_test_element1d_matrix.py  channel_Cw.py  channel_J_Cw.py  channel_J_Cw_0007.py  channel_J_Cw_run.py  conftest.py  example004.py  test_basic.py  test_copilot.py  test_element1d.py  test_env.py  test_env_basic.py  test_hello.py  test_material.py  test_node1d.py  test_text.py
(+202 files in other folders)
